--- a/static/CSS/publicaciones.css
+++ b/static/CSS/publicaciones.css
@@ -226,7 +226,7 @@
         width: 5%;
     }
     .btnlike{
-        background-color: #030031;   
+        background-color: #02001b;   
         width: 35px;
         height: 30px;
         padding: 0;
