--- a/static/CSS/perfil.css
+++ b/static/CSS/perfil.css
@@ -116,6 +116,7 @@ ul{
 }
 .containerpu ul{
     margin: 0 auto;
+    width: 90%;
 }
 
 .partelike{
@@ -125,7 +126,7 @@ ul{
     width: 30%;
 }
 .respuesta{
-    width: 60%;
+    width: 50%;
     height: 100px;
     display: block;
 }
@@ -149,22 +150,83 @@ ul{
     height: 120px;
     justify-content: space-between;
 }
-.img3{
-    width: 5%;
-    
+.partelike{ 
+    display: flex;
+    justify-content: end;   
+    align-items:unsafe;
+    width: 30%;
 }
-.btnlike{
+.respuesta{
+    width: 60%;
+    height: 100px;
+    display: block;
+}
+.respuesta textarea{
+    background-color: #02001b;
+    border: 3px solid #00307969;
+    width: 100%;
+    height: 60px;
+    resize: none;
+    border-radius:20px ;
+    padding: 10px;
+    color: white;
+
+}
+
+.respuesta button{
+    width: 20%;
+    height: 25px;
+    border-radius: 15px;
+    border: 2px solid white;
+    background-color: #02001b;
+    color: white;
+}
+.respuesta button:hover{
+    border: 2px solid #02001b;
+    background-color: #ffffff;
+    color: #02001b;
+}
+
+.likeuser1{
+    margin:0 auto;
+    padding: 1% 10%;
     display: flex;
     justify-content: end;
-    background-color: #02001b;
-    border: none;  
+    width: 55%;
+    border-bottom: 2px solid  #050044b4;
+}
+.img3{
+    width: 80%;
+    padding: 0;
+    
+}
+.img4{
+    width: 80%;
+}
+.btnlike{
+    background-color: #02001b;   
+    width: 35px;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    border: none;
 }
 .li1{
     border-bottom: 2px  #050044b4 solid;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    justify-content: center;
+}
+
+
+.li2{
     width: 80%;
-    margin: 0 10% auto;
+    margin: 0% auto;
     display: block;
 }
+
 .p1{
     margin-left: 10%;
     display: flex;
