--- a/static/CSS/publicaciones.css
+++ b/static/CSS/publicaciones.css
@@ -12,6 +12,15 @@
         padding: 0 1.5%;
     }
 
+a:hover {
+    border: 2px solid  #02001b;
+    border-radius: 10px;
+        text-decoration: none;
+        color: #02001b;
+        background-color: white;
+        font-size: 20px;
+        padding: 0 1.5%;
+    }
     hr {
         color: white;
     }
