--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body1">
         <form action="/login" method="POST">
-            <div class="container">
+            <div class="container">`
                 <div class="cubo1">
                     <img src="{{url_for('static', filename='./Images/sesion.png')}}" class="img_sesion">
                 </div>
