--- a/static/CSS/editar_perfil.css
+++ b/static/CSS/editar_perfil.css
@@ -34,7 +34,8 @@ a{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 2px solid rgb(255, 255, 255);
+    display: inline-block;
+    text-align: center;
 }
 .dentro{
     margin: 0 70px;
@@ -85,6 +86,7 @@ a{
 .img1{
     width: 100%;
     border-radius: 50%;
+    border: 2px solid white;
 }
 .cargar{
     color:white;
@@ -105,3 +107,4 @@ a{
     background-color: white;
     color: #02001b;
 }
+
