--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -10,9 +10,13 @@
     <div class="barrita">
         <p class="titulo">Editar Perfil</p>
         <div class="edit">
-            {% if user.foto_perfil %}
-                <img src="data:image/png;base64,{{ user.foto_perfil }}" alt="Foto de perfil" class="img1">
-            {% endif %}
+            <a href="{{ url_for('perfil', id_usuario=user.id_usuario) }}">
+                {% if user.foto_perfil %}
+                <img src="data:image/png;base64,{{ user.foto_perfil }}" alt="Foto" class="img1">
+                {% else %}
+                <img src="{{ url_for('static', filename='Images/foto_defecto.png') }}" alt="Foto por defecto" class="img1">
+            {% endif %}    
+            </a>
         </div>
     </div>
     
